mongo-and-istio/istio-gateway-sharded.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: sharded-mongo
spec:
  selector:
    app: istio-ingressgateway
  servers:
  - port:
      number: 27017
      name: mongo
      protocol: MONGO
    hosts:
    - "*"
